[workspace]
members = ["program", "secp256k1-verify"]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic"))',
] }

[workspace.dependencies]
hex = "0.4.3"
k256 = "0.13.4"
mollusk-svm = "0.13.4"
pinocchio = "0.11.2"
sha3 = "0.12.0"
solana-address = "2.6.1"
solana-define-syscall = { version = "5.0", features = [
    "unstable-static-syscalls",
] }
solana-instruction = "3.3.0"
solana-keccak-hasher = { version = "3.1.0", features = ["sha3"] }
solana-secp256k1-recover = "3.1.1"
solana-secp256k1-verify = { path = "secp256k1-verify", version = "0.1.0", default-features = false }
solana-sha256-hasher = "3.1.0"
