[package]
name = "solana-secp256k1-program"
version = "4.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
no-entrypoint = []

[dependencies]
pinocchio = { workspace = true }
solana-secp256k1-verify = { workspace = true }

[target.'cfg(not(any(target_os = "solana", target_arch = "bpf")))'.dependencies]
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }
solana-pubkey = { workspace = true }

[lints]
workspace = true
