[package]
name = "solana-secp256k1-program"
version = "4.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
pinocchio = { workspace = true }
solana-secp256k1-verify = { workspace = true, features = ["verify", "keccak"] }

[dev-dependencies]
mollusk-svm = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }
solana-address = { workspace = true }
solana-secp256k1-verify = { workspace = true, features = [
    "verify",
    "keccak",
    "instruction",
] }

[lints]
workspace = true
