[package]
name = "solana-secp256k1-verify"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = ["verify", "instruction", "keccak"]
verify = ["dep:solana-secp256k1-recover", "dep:solana-define-syscall"]
instruction = ["dep:solana-instruction", "dep:solana-pubkey"]
keccak = ["dep:solana-keccak-hasher"]
sha256 = ["dep:solana-sha256-hasher"]


[dependencies]
solana-secp256k1-recover = { workspace = true, optional = true }
solana-keccak-hasher = { workspace = true, optional = true }
solana-sha256-hasher = { workspace = true, optional = true }
solana-define-syscall = { workspace = true, optional = true }
solana-instruction = { workspace = true, optional = true }
solana-pubkey = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }

[lints]
workspace = true
